syntax = "proto3";
package proto;


option java_package = "win.liyufan.im.proto";
option java_outer_classname = "GeneralResultOuterClass";

//option objc_class_prefix = "LYF";

message GeneralResult {
  int32 error_code = 1;
}
