syntax = "proto3";
package mars.stn;


option java_package = "win.liyufan.im.proto";
option java_outer_classname = "AddGroupMemberRequestOuterClass";

//option objc_class_prefix = "LYF";

import "message_content.proto";

message AddGroupMemberRequest {
  string group_id = 1;
  repeated string added_member = 2;
  MessageContent notify_content = 3;
}
