syntax = "proto3";
package mars.stn;


option java_package = "win.liyufan.im.proto";
option java_outer_classname = "QuitGroupRequestOuterClass";

//option objc_class_prefix = "LYF";

import "message_content.proto";

message QuitGroupRequest {
  string group_id = 1;
  MessageContent notify_content = 2;
}
